--- a/src/pages/employeeManagement/EmployeeManagement.css
+++ b/src/pages/employeeManagement/EmployeeManagement.css
@@ -168,19 +168,20 @@
   align-items: center;
   margin-right: 60%;
   gap: 8px;
-  background: linear-gradient(135deg, #0e45eb, #2540b0);
+  background: linear-gradient(135deg, #b80eeb, #2540b0);
   color: #fff;
   border: none;
-  padding: 12px 24px;
+  padding: 6px 24px;
   font-size: 15px;
   font-weight: 600;
-  border-radius: 30px;
+  border-radius: 18px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 .add-task-button1:hover {
-  background: linear-gradient(135deg, #2540b0, #0e45eb);
+  background: linear-gradient(135deg, #2540b0, #b80eeb);
+
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
 }
