--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -69,7 +69,7 @@
   
   .user-profile-name {
     font-weight: 600;
-    color: #0d47a1;
+    color: #8011ee;
     font-size: 0.95rem;
     white-space: nowrap;
   }
